Updated Logics for Reports and Query Viewer